--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
+                  <i class="fas fa-search fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/ingredients/lime.jpg" alt="">
@@ -134,7 +134,7 @@
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
+                  <i class="fas fa-search fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/ingredients/sake.jpg" alt="">
@@ -148,7 +148,7 @@
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
+                  <i class="fas fa-search fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/ingredients/sirop.jpg" alt="">
@@ -162,7 +162,7 @@
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
+                  <i class="fas fa-search fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/ingredients/soda.jpg" alt="">
@@ -176,7 +176,7 @@
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
+                  <i class="fas fa-search fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/ingredients/cinnamon.jpg" alt="">
@@ -190,7 +190,7 @@
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
+                  <i class="fas fa-search fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/ingredients/shaker.jpg" alt="">
